# EllipseFitter

./: CMakeLists.txt  README.md  ellipse_fit.cpp  ellipse_fit.h
src/lib/: CMakeLists.txt
src/lib/ellipse_fit/: CMakeLists.txt  ellipse_fit.cpp  ellipse_fit.h
src/lib/ellipse_fit/tests/: CMakeLists.txt  ellipse_fit_speed_test.cpp  ellipse_fit_tests.cpp
